<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:padding="0.0dip">

        <TextView
            android:id="@+id/portNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_port"
            android:textSize="12.0sp"
            android:visibility="invisible" />

        <RelativeLayout
            android:id="@+id/dropdown_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/choiceSpinner_legacyModule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/choice_array"
                android:prompt="@string/choice_prompt"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextResult_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_prompt_text"
                android:inputType="text"
                android:maxLength="200" />

            <TextView
                android:id="@+id/titleTextView_analogInput7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextResult_name"
                android:layout_marginBottom="5.0dip"
                android:paddingLeft="10.0dip"
                android:text="@string/name_prompt_undertext" />

            <Button
                android:id="@+id/edit_controller_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView_analogInput7"
                android:layout_gravity="end"
                android:layout_marginTop="0.0dip"
                android:onClick="editController_portALL"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/edit_controller"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>
</merge>