<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:id="@+id/row_port_digital_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2.0dip">

        <TextView
            android:id="@+id/port_number_digital_device"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:text="0"
            android:textSize="22.0sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/choiceSpinner_digital_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/choice_array_digital_device"
                android:prompt="@string/choice_prompt_digital_device"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/editTextResult_digital_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/choiceSpinner_digital_device"
                android:hint="@string/input_name_hint"
                android:inputType="text"
                android:maxLength="200" />

            <TextView
                android:id="@+id/titleTextView_digital_device"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextResult_digital_device"
                android:text="@string/input_name_label" />
        </RelativeLayout>
    </TableRow>
</merge>