<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@id/included_header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/matrix_controller_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5.0dip"
            android:layout_marginRight="5.0dip"
            android:onClick="saveMatrixController"
            android:text="@string/done_button" />

        <Button
            android:id="@+id/matrix_controller_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_toEndOf="@id/matrix_controller_saveButton"
            android:layout_toRightOf="@id/matrix_controller_saveButton"
            android:onClick="cancelMatrixController"
            android:text="@string/cancel" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/matrixcontroller_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_prompt_text"
                android:inputType="text"
                android:maxLength="200"
                android:text="@string/matrix_controller_name"
                android:textSize="18.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controller_name_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30.0dip"
                android:text="@string/matrix_controller_name_prompt" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:background="#ffff0000" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tableLayout_pwm_devices"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableRow
                    android:id="@+id/table_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5.0dip">

                    <TextView
                        android:id="@+id/port_title"
                        android:paddingEnd="5.0dip"
                        android:paddingLeft="5.0dip"
                        android:paddingRight="10.0dip"
                        android:text="@string/port"
                        android:textSize="12.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/attached_title"
                        android:text="@string/attached"
                        android:textSize="12.0sp"
                        android:textStyle="bold" />
                </TableRow>

                <View
                    android:layout_height="2.0dip"
                    android:background="#ffff0000" />

                <TextView
                    android:id="@+id/servos_title"
                    android:paddingEnd="5.0dip"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="10.0dip"
                    android:text="@string/matrix_servo_title"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <View
                    android:layout_height="2.0dip"
                    android:background="#ffff0000" />

                <TextView
                    android:id="@+id/motors_title"
                    android:paddingEnd="5.0dip"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="10.0dip"
                    android:text="@string/matrix_motor_title"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />

                <LinearLayout
                    android:id="@+id/linearLayout_matrix8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:orientation="vertical" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>