<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@id/included_header"
        layout="@layout/header" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/device_interface_module_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5.0dip"
            android:layout_marginRight="5.0dip"
            android:onClick="saveDeviceInterface"
            android:text="@string/done_button" />

        <Button
            android:id="@+id/device_interface_module_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_toEndOf="@id/device_interface_module_saveButton"
            android:layout_toRightOf="@id/device_interface_module_saveButton"
            android:onClick="cancelDeviceInterface"
            android:text="@string/cancel" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2.0dip"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/device_interface_module_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_prompt_text"
            android:inputType="text"
            android:maxLength="200"
            android:text="@string/servo_controller_name"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device_interface_module_serialNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.0dip"
            android:layout_marginStart="8.0dip" />

        <ListView
            android:id="@+id/listView_devices"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:entries="@array/device_interface_module_options_array" />
    </LinearLayout>
</LinearLayout>