<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_info_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:id="@+id/file_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/table_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5.0dip">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filename_editText"
                    android:layout_width="300.0dip"
                    android:layout_height="wrap_content"
                    android:maxLength="200"
                    android:text="@string/filename_editText"
                    android:textSize="20.0sp" />

                <LinearLayout
                    android:id="@+id/horizontalButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/file_edit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3.0dip"
                        android:layout_marginRight="3.0dip"
                        android:onClick="file_edit_button"
                        android:text="@string/file_edit_button"
                        android:textSize="16.0sp" />

                    <Button
                        android:id="@+id/file_activate_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3.0dip"
                        android:layout_marginRight="3.0dip"
                        android:onClick="file_activate_button"
                        android:text="@string/file_activate_button"
                        android:textSize="16.0sp" />

                    <Button
                        android:id="@+id/file_delete_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3.0dip"
                        android:layout_marginRight="3.0dip"
                        android:onClick="file_delete_button"
                        android:text="@string/file_delete_button"
                        android:textSize="16.0sp" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/controllers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>